--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=5.0">
-    <meta name="description" content="Plavecký trénink pod dohledem vysokoškolsky vzdělaných profesionálů s několikaletou praxí v oboru - Praha, Brno, Ostrava, Olomouc nebo Online">
+    <meta content="Plavecký trénink pod dohledem vysokoškolsky vzdělaných profesionálů s několikaletou praxí v oboru - Praha, Brno, Ostrava, Olomouc nebo Online" name="description">
+    <meta content="Plavecký trénink pod dohledem vysokoškolsky vzdělaných profesionálů s několikaletou praxí v oboru - Praha, Brno, Ostrava, Olomouc nebo Online" property="og:description">
     <title>Trenér plavání Praha, Brno, Ostrava, Olomouc a Online</title>
+    <meta content="Trenér plavání Praha, Brno, Ostrava, Olomouc a Online" property="og:title">
+
     <link rel="icon"href="static/images/logo_icon.png">
     <link rel="canonical" href="https://www.elementswimming.cz/index.html" />
     <link rel="apple-touch-icon" href="static/images/apple-touch-icon-144x144.png">
@@ -297,7 +300,7 @@
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content px-2">
           <div class="modal-header text-center">
-            <h2 class="modal-title text-muted wh-100">Praha - ceník a služby</h2>
+            <h2 class="modal-title text-muted wh-100">Trenér plavání Praha - ceník a služby</h2>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
@@ -372,7 +375,7 @@
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content px-2">
           <div class="modal-header text-center">
-            <h2 class="modal-title text-muted wh-100">Brno - ceník a služby</h2>
+            <h2 class="modal-title text-muted wh-100">Trenér plavání Brno - ceník a služby</h2>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
@@ -447,7 +450,7 @@
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content px-2">
           <div class="modal-header text-center">
-            <h2 class="modal-title text-muted wh-100">Ostrava - ceník a služby</h2>
+            <h2 class="modal-title text-muted wh-100">Trenér plavání Ostrava - ceník a služby</h2>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
@@ -522,7 +525,7 @@
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content px-2">
           <div class="modal-header text-center">
-            <h2 class="modal-title text-muted wh-100">Olomouc - ceník a služby</h2>
+            <h2 class="modal-title text-muted wh-100">Trenér plavání Olomouc - ceník a služby</h2>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
