meta and titles optimization

--- a/index.html
+++ b/index.html
@@ -4,11 +4,24 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=5.0">
-    <meta content="Plavecký trénink pod dohledem vysokoškolsky vzdělaných profesionálů s několikaletou praxí v oboru - Praha, Brno, Ostrava, Olomouc nebo Online" name="description">
-    <meta content="Plavecký trénink pod dohledem vysokoškolsky vzdělaných profesionálů s několikaletou praxí v oboru - Praha, Brno, Ostrava, Olomouc nebo Online" property="og:description">
     <title>Trenér plavání Praha, Brno, Ostrava, Olomouc a Online</title>
-    <meta content="Trenér plavání Praha, Brno, Ostrava, Olomouc a Online" property="og:title">
+    <meta content="Plavecký trénink pod dohledem vysokoškolsky vzdělaných profesionálů s několikaletou praxí v oboru - Praha, Brno, Ostrava, Olomouc nebo Online" name="description">
+    
+    <meta property="og:title" content="Trenér plavání Praha, Brno, Ostrava, Olomouc a Online">
+    <meta property="og:description" content="Plavecký trénink pod dohledem vysokoškolsky vzdělaných profesionálů s několikaletou praxí v oboru - Praha, Brno, Ostrava, Olomouc nebo Online">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.elementswimming.cz/">
+    <meta property="og:site_name" content="Element swimming">
+    <meta property="og:image" content="https://www.elementswimming.cz/static/images/home_photo.webp">
+    <meta property="og:image:height" content="525">
+    <meta property="og:image:width" content="1024">
 
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@elementswimming">
+    <meta name="twitter:title" content="Element swimming">
+    <meta name="twitter:description" content="Plavecký trénink pod dohledem vysokoškolsky vzdělaných profesionálů s několikaletou praxí v oboru - Praha, Brno, Ostrava, Olomouc nebo Online">
+    <meta name="twitter:image" content="https://www.elementswimming.cz/static/images/home_photo.webp">
+    
     <link rel="icon"href="static/images/logo_icon.png">
     <link rel="canonical" href="https://www.elementswimming.cz/index.html" />
     <link rel="apple-touch-icon" href="static/images/apple-touch-icon-144x144.png">
@@ -63,8 +76,9 @@
     <div id="home" class="container my-5 pt-8">
       <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center">
         <div class="col-lg-5 p-3 p-lg-5 pt-lg-3 justify-content-center">
-          <p class="pre-title fw-bold">Do bazénu? Jedině s námi!<p>
-          <h1 class="display-4 fw-bold lh-1 py-3">Plavecký trénink 21. století</h1>
+          <p class="pre-title fw-bold">Do bazénu? Jedině s námi!</p>
+          <h1 class="pre-title fw-bold" style="display:none">Trenér plavání Praha, Brno, Ostrava, Olomouc a Online</h1>
+          <p class="display-4 fw-bold lh-1 py-3">Plavecký trénink 21. století</p>
           <p class="lead">Moderní pojetí tréninkového procesu, podložené aktuálními trendy a pod dohledem vysokoškolsky vzdělaných profesionálu v daném oboru</p>
           <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3 pt-5 justify-content-center buttons">
             <a href="#contact"><button type="button" class="btn bg-color-es btn-lg px-4 me-sm-3 text-white">Rezervovat trénink</button></a>
@@ -89,7 +103,7 @@
           <img src="static/images/pan_trener.webp" class="d-block mx-lg-auto img-fluid img-fluid-cust border rounded-3 shadow-lg section-image" title="Trenér plavání Dominik Vavrečka" alt="Trenér plavání Dominik Vavrečka" loading="lazy">
         </div>
         <div class="col-lg-6">
-          <h1 class="display-5 fw-bold lh-1 py-3">O nás</h1>
+          <p class="display-5 fw-bold lh-1 py-3">O nás</p>
           <p class="lead text-justify"><p class="lead text-justify">Organizace Element swimming byla založena Dominikem Vavrečkou, který jí rovněž vede a udává její směr už od roku 2019.<br><br>
           Dominik je sportovec tělem i duší a sport je jeho součástí. Byl členem v Klubu plaveckých sportů Ostrava, ve kterém působil po dobu 10 let své závodní kariéry. Změna přišla s nástupem na Masarykovu Univerzitu v Brně. Zde pokračoval ve své plavecké kariéře, a to po celou dobu svého studia. Během 5 let stihl vystudovat bakalářský program „Trenérství“ a navazující magisterský obor „Kondiční trenér“.
           Během své sportovní kariéry dosáhl Dominik hned několika úspěchů. Je několikanásobný medailista Mistrovství ČR, účastník Mistrovství Evropy a světa.
@@ -123,7 +137,7 @@
 
     <!-- Services -->
     <div id="services" class="container col-xxl-10 px-4 py-5 border-bottom">
-      <h1 class="display-5 py-3 fw-bold text-center">Služby</h1>
+      <p class="display-5 py-3 fw-bold text-center">Služby</p>
       <div class="col-xxl-12 mx-auto">
         <p class="lead mb-4 text-justify">
           Individuální lekce probíhají s certifikovanými trenéry <i>ČSPS (Český svaz plaveckých sportů)</i>. Každý náš trenér absolvoval dlouhodobou plaveckou přípravu. Právě díky ní, může své poznatky předávat dál naším klientům. 
@@ -229,7 +243,7 @@
           <img src="static/images/contact_logo.webp" class="d-block mx-lg-auto img-fluid section-image" title="Element Swimming" alt="Logo Element Swimming velké" loading="lazy">
         </div>
         <div class="col-lg-6">
-          <h1 class="display-5 fw-bold lh-1 mb-3">Kontakt</h1>
+          <p class="display-5 fw-bold lh-1 mb-3">Kontakt</p>
           <p class="lead text-justify">
             Máte zájem o první lekci, chcete si zarezervovat termín se svým trenérem a nebo řešit něco jiného?
             <br>
@@ -309,8 +323,8 @@
               <div class="card card-cover h-90 overflow-hidden text-white bg-color-es rounded-5 shadow-lg" style="background-image: url('unsplash-photo-2.jpg');">
                 <div class="d-flex flex-column h-50 p-5 pb-3 text-white text-shadow-1">
                   <div class="d-flex justify-content-between flex-wrap align-items-center">
-                  <h2 class="mb-3 display-6 lh-1 fw-bold pr-2">Program 1.1</h2>
-                  <h2 class="mb-3 lh-1 fw-bold">800,- Kč/hod</h2>
+                  <p class="mb-3 display-6 lh-1 fw-bold pr-2">Program 1.1</p>
+                  <p class="mb-3 display-cust lh-1 fw-bold">800,- Kč/hod</p>
                 </div>
                   <ul class="d-flex list-unstyled mt-auto">
                     <li class="d-flex align-items-center me-3">
@@ -324,8 +338,8 @@
               <div class="card card-cover h-90 overflow-hidden text-white bg-color-es rounded-5 shadow-lg" style="background-image: url('unsplash-photo-2.jpg');">
                 <div class="d-flex flex-column h-50 p-5 pb-3 text-white text-shadow-1">
                   <div class="d-flex justify-content-between flex-wrap align-items-center">
-                  <h2 class="mb-4 display-6 lh-1 fw-bold">Program 1.2</h2>
-                  <h2 class="mb-4 lh-1 fw-bold">900,- Kč/hod</h2>
+                  <p class="mb-4 display-6 lh-1 fw-bold">Program 1.2</p>
+                  <p class="mb-4 display-cust lh-1 fw-bold">900,- Kč/hod</p>
                 </div>
                   <ul class="d-flex list-unstyled mt-auto">
                     <li class="d-flex align-items-center me-3">
@@ -339,8 +353,8 @@
               <div class="card card-cover h-90 overflow-hidden text-white bg-color-es rounded-5 shadow-lg" style="background-image: url('unsplash-photo-2.jpg');">
                 <div class="d-flex flex-column h-50 p-5 pb-3 text-white text-shadow-1">
                   <div class="d-flex justify-content-between flex-wrap align-items-center">
-                  <h2 class="mb-4 display-6 lh-1 fw-bold">Program 1.3</h2>
-                  <h2 class="mb-4 lh-1 fw-bold">1000,- Kč/hod</h2>
+                  <p class="mb-4 display-6 lh-1 fw-bold">Program 1.3</p>
+                  <p class="mb-4 display-cust lh-1 fw-bold">1000,- Kč/hod</p>
                 </div>
                   <ul class="d-flex list-unstyled mt-auto">
                     <li class="d-flex align-items-center me-3">
@@ -354,8 +368,8 @@
               <div class="card card-cover h-90 overflow-hidden text-white bg-color-es rounded-5 shadow-lg" style="background-image: url('unsplash-photo-2.jpg');">
                 <div class="d-flex flex-column h-50 p-5 pb-3 text-white text-shadow-1">
                   <div class="d-flex justify-content-between flex-wrap align-items-center">
-                  <h2 class="mb-4 display-6 lh-1 fw-bold">Program 1.5</h2>
-                  <h2 class="mb-4 lh-1 fw-bold">1250,- Kč/hod</h2>
+                  <p class="mb-4 display-6 lh-1 fw-bold">Program 1.5</p>
+                  <p class="mb-4 display-cust lh-1 fw-bold">1250,- Kč/hod</p>
                 </div>
                   <ul class="d-flex list-unstyled mt-auto">
                     <li class="d-flex align-items-center me-3">
@@ -384,8 +398,8 @@
               <div class="card card-cover h-90 overflow-hidden text-white bg-color-es rounded-5 shadow-lg" style="background-image: url('unsplash-photo-2.jpg');">
                 <div class="d-flex flex-column h-50 p-5 pb-3 text-white text-shadow-1">
                   <div class="d-flex justify-content-between flex-wrap align-items-center">
-                  <h2 class="mb-3 display-6 lh-1 fw-bold pr-2">Program 1.1</h2>
-                  <h2 class="mb-3 lh-1 fw-bold">600,- Kč/hod</h2>
+                  <p class="mb-3 display-6 lh-1 fw-bold pr-2">Program 1.1</p>
+                  <p class="mb-3 display-cust lh-1 fw-bold">600,- Kč/hod</p>
                 </div>
                   <ul class="d-flex list-unstyled mt-auto">
                     <li class="d-flex align-items-center me-3">
@@ -399,8 +413,8 @@
               <div class="card card-cover h-90 overflow-hidden text-white bg-color-es rounded-5 shadow-lg" style="background-image: url('unsplash-photo-2.jpg');">
                 <div class="d-flex flex-column h-50 p-5 pb-3 text-white text-shadow-1">
                   <div class="d-flex justify-content-between flex-wrap align-items-center">
-                  <h2 class="mb-4 display-6 lh-1 fw-bold">Program 1.2</h2>
-                  <h2 class="mb-4 lh-1 fw-bold">700,- Kč/hod</h2>
+                  <p class="mb-4 display-6 lh-1 fw-bold">Program 1.2</p>
+                  <p class="mb-4 display-cust lh-1 fw-bold">700,- Kč/hod</p>
                 </div>
                   <ul class="d-flex list-unstyled mt-auto">
                     <li class="d-flex align-items-center me-3">
@@ -414,8 +428,8 @@
               <div class="card card-cover h-90 overflow-hidden text-white bg-color-es rounded-5 shadow-lg" style="background-image: url('unsplash-photo-2.jpg');">
                 <div class="d-flex flex-column h-50 p-5 pb-3 text-white text-shadow-1">
                   <div class="d-flex justify-content-between flex-wrap align-items-center">
-                  <h2 class="mb-4 display-6 lh-1 fw-bold">Program 1.3</h2>
-                  <h2 class="mb-4 lh-1 fw-bold">750,- Kč/hod</h2>
+                  <p class="mb-4 display-6 lh-1 fw-bold">Program 1.3</p>
+                  <p class="mb-4 display-cust lh-1 fw-bold">750,- Kč/hod</p>
                 </div>
                   <ul class="d-flex list-unstyled mt-auto">
                     <li class="d-flex align-items-center me-3">
@@ -429,8 +443,8 @@
               <div class="card card-cover h-90 overflow-hidden text-white bg-color-es rounded-5 shadow-lg" style="background-image: url('unsplash-photo-2.jpg');">
                 <div class="d-flex flex-column h-50 p-5 pb-3 text-white text-shadow-1">
                   <div class="d-flex justify-content-between flex-wrap align-items-center">
-                  <h2 class="mb-4 display-6 lh-1 fw-bold">Program 1.5</h2>
-                  <h2 class="mb-4 lh-1 fw-bold">1000,- Kč/hod</h2>
+                  <p class="mb-4 display-6 lh-1 fw-bold">Program 1.5</p>
+                  <p class="mb-4 display-cust lh-1 fw-bold">1000,- Kč/hod</p>
                 </div>
                   <ul class="d-flex list-unstyled mt-auto">
                     <li class="d-flex align-items-center me-3">
@@ -459,8 +473,8 @@
               <div class="card card-cover h-90 overflow-hidden text-white bg-color-es rounded-5 shadow-lg" style="background-image: url('unsplash-photo-2.jpg');">
                 <div class="d-flex flex-column h-50 p-5 pb-3 text-white text-shadow-1">
                   <div class="d-flex justify-content-between flex-wrap align-items-center">
-                  <h2 class="mb-3 display-6 lh-1 fw-bold pr-2">Program 1.1</h2>
-                  <h2 class="mb-3 lh-1 fw-bold">600,- Kč/hod</h2>
+                  <p class="mb-3 display-6 lh-1 fw-bold pr-2">Program 1.1</p>
+                  <p class="mb-3 display-cust lh-1 fw-bold">600,- Kč/hod</p>
                 </div>
                   <ul class="d-flex list-unstyled mt-auto">
                     <li class="d-flex align-items-center me-3">
@@ -474,8 +488,8 @@
               <div class="card card-cover h-90 overflow-hidden text-white bg-color-es rounded-5 shadow-lg" style="background-image: url('unsplash-photo-2.jpg');">
                 <div class="d-flex flex-column h-50 p-5 pb-3 text-white text-shadow-1">
                   <div class="d-flex justify-content-between flex-wrap align-items-center">
-                  <h2 class="mb-4 display-6 lh-1 fw-bold">Program 1.2</h2>
-                  <h2 class="mb-4 lh-1 fw-bold">700,- Kč/hod</h2>
+                  <p class="mb-4 display-6 lh-1 fw-bold">Program 1.2</p>
+                  <p class="mb-4 display-cust lh-1 fw-bold">700,- Kč/hod</p>
                 </div>
                   <ul class="d-flex list-unstyled mt-auto">
                     <li class="d-flex align-items-center me-3">
@@ -489,8 +503,8 @@
               <div class="card card-cover h-90 overflow-hidden text-white bg-color-es rounded-5 shadow-lg" style="background-image: url('unsplash-photo-2.jpg');">
                 <div class="d-flex flex-column h-50 p-5 pb-3 text-white text-shadow-1">
                   <div class="d-flex justify-content-between flex-wrap align-items-center">
-                  <h2 class="mb-4 display-6 lh-1 fw-bold">Program 1.3</h2>
-                  <h2 class="mb-4 lh-1 fw-bold">750,- Kč/hod</h2>
+                  <p class="mb-4 display-6 lh-1 fw-bold">Program 1.3</p>
+                  <p class="mb-4 display-cust lh-1 fw-bold">750,- Kč/hod</p>
                 </div>
                   <ul class="d-flex list-unstyled mt-auto">
                     <li class="d-flex align-items-center me-3">
@@ -504,8 +518,8 @@
               <div class="card card-cover h-90 overflow-hidden text-white bg-color-es rounded-5 shadow-lg" style="background-image: url('unsplash-photo-2.jpg');">
                 <div class="d-flex flex-column h-50 p-5 pb-3 text-white text-shadow-1">
                   <div class="d-flex justify-content-between flex-wrap align-items-center">
-                  <h2 class="mb-4 display-6 lh-1 fw-bold">Program 1.5</h2>
-                  <h2 class="mb-4 lh-1 fw-bold">1000,- Kč/hod</h2>
+                  <p class="mb-4 display-6 lh-1 fw-bold">Program 1.5</p>
+                  <p class="mb-4 display-cust lh-1 fw-bold">1000,- Kč/hod</p>
                 </div>
                   <ul class="d-flex list-unstyled mt-auto">
                     <li class="d-flex align-items-center me-3">
@@ -534,8 +548,8 @@
               <div class="card card-cover h-90 overflow-hidden text-white bg-color-es rounded-5 shadow-lg" style="background-image: url('unsplash-photo-2.jpg');">
                 <div class="d-flex flex-column h-50 p-5 pb-3 text-white text-shadow-1">
                   <div class="d-flex justify-content-between flex-wrap align-items-center">
-                  <h2 class="mb-3 display-6 lh-1 fw-bold pr-2">Program 1.1</h2>
-                  <h2 class="mb-3 lh-1 fw-bold">600,- Kč/hod</h2>
+                  <p class="mb-3 display-6 lh-1 fw-bold pr-2">Program 1.1</p>
+                  <p class="mb-3 display-cust lh-1 fw-bold">600,- Kč/hod</p>
                 </div>
                   <ul class="d-flex list-unstyled mt-auto">
                     <li class="d-flex align-items-center me-3">
@@ -549,8 +563,8 @@
               <div class="card card-cover h-90 overflow-hidden text-white bg-color-es rounded-5 shadow-lg" style="background-image: url('unsplash-photo-2.jpg');">
                 <div class="d-flex flex-column h-50 p-5 pb-3 text-white text-shadow-1">
                   <div class="d-flex justify-content-between flex-wrap align-items-center">
-                  <h2 class="mb-4 display-6 lh-1 fw-bold">Program 1.2</h2>
-                  <h2 class="mb-4 lh-1 fw-bold">700,- Kč/hod</h2>
+                  <p class="mb-4 display-6 lh-1 fw-bold">Program 1.2</p>
+                  <p class="mb-4 display-cust lh-1 fw-bold">700,- Kč/hod</p>
                 </div>
                   <ul class="d-flex list-unstyled mt-auto">
                     <li class="d-flex align-items-center me-3">
@@ -564,8 +578,8 @@
               <div class="card card-cover h-90 overflow-hidden text-white bg-color-es rounded-5 shadow-lg" style="background-image: url('unsplash-photo-2.jpg');">
                 <div class="d-flex flex-column h-50 p-5 pb-3 text-white text-shadow-1">
                   <div class="d-flex justify-content-between flex-wrap align-items-center">
-                  <h2 class="mb-4 display-6 lh-1 fw-bold">Program 1.3</h2>
-                  <h2 class="mb-4 lh-1 fw-bold">750,- Kč/hod</h2>
+                  <p class="mb-4 display-6 lh-1 fw-bold">Program 1.3</p>
+                  <p class="mb-4 display-cust lh-1 fw-bold">750,- Kč/hod</p>
                 </div>
                   <ul class="d-flex list-unstyled mt-auto">
                     <li class="d-flex align-items-center me-3">
@@ -579,8 +593,8 @@
               <div class="card card-cover h-90 overflow-hidden text-white bg-color-es rounded-5 shadow-lg" style="background-image: url('unsplash-photo-2.jpg');">
                 <div class="d-flex flex-column h-50 p-5 pb-3 text-white text-shadow-1">
                   <div class="d-flex justify-content-between flex-wrap align-items-center">
-                  <h2 class="mb-4 display-6 lh-1 fw-bold">Program 1.5</h2>
-                  <h2 class="mb-4 lh-1 fw-bold">1000,- Kč/hod</h2>
+                  <p class="mb-4 display-6 lh-1 fw-bold">Program 1.5</p>
+                  <p class="mb-4 display-cust lh-1 fw-bold">1000,- Kč/hod</p>
                 </div>
                   <ul class="d-flex list-unstyled mt-auto">
                     <li class="d-flex align-items-center me-3">
@@ -609,8 +623,8 @@
               <div class="card card-cover h-90 overflow-hidden text-white bg-color-es rounded-5 shadow-lg" style="background-image: url('unsplash-photo-2.jpg');">
                 <div class="d-flex flex-column h-50 p-5 pb-3 text-white text-shadow-1">
                   <div class="d-flex justify-content-between flex-wrap align-items-center">
-                  <h2 class="mb-3 display-6 lh-1 fw-bold pr-2">Konzultace</h2>
-                  <h2 class="mb-3 lh-1 fw-bold">Od 800,- Kč/hod</h2>
+                  <p class="mb-3 display-6 lh-1 fw-bold pr-2">Konzultace</p>
+                  <p class="mb-3 display-cust lh-1 fw-bold">Od 800,- Kč/hod</p>
                 </div>
                   <ul class="d-flex list-unstyled mt-auto">
                     <li class="d-flex align-items-center me-3">
