--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Trenér plavání Praha, Brno, Ostrava, Olomouc a Online</title>
     <meta content="Plavecký trénink pod dohledem vysokoškolsky vzdělaných profesionálů s několikaletou praxí v oboru - Praha, Brno, Ostrava, Olomouc nebo Online" name="description">
     
+    <meta property="og:locale" content="cs_CZ">
     <meta property="og:title" content="Trenér plavání Praha, Brno, Ostrava, Olomouc a Online">
     <meta property="og:description" content="Plavecký trénink pod dohledem vysokoškolsky vzdělaných profesionálů s několikaletou praxí v oboru - Praha, Brno, Ostrava, Olomouc nebo Online">
     <meta property="og:type" content="website">
