--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=5.0">
-    <title>Trenér plavání Praha, Brno, Ostrava, Olomouc a Online | ES</title>
+    <title>Trenér plavání Praha, Brno, Ostrava, Olomouc, Online|Element Swimming</title>
     <meta content="Plavecký trénink pod dohledem vysokoškolsky vzdělaných profesionálů s několikaletou praxí v oboru - Praha, Brno, Ostrava, Olomouc nebo Online" name="description">
     
     <meta property="og:locale" content="cs_CZ">
