Card long text margin bottom

--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
                                     <p class="mb-4 display-cust lh-1 fw-bold">2000 Kč</p>
                                 </div>
                                 <ul class="d-flex list-unstyled mt-auto">
-                                    <li class="d-flex align-items-center me-3 text-justify">
+                                    <li class="d-flex align-items-center me-3 text-justify long-text">
                                         <small>Videoanalýza plaveckého způsobu s následnou korekcí techniky. Při využití této služby Vám bude poskytnut video
                                             záznam vašeho
                                             plaveckého způsobu, který následně rozebereme a společně se pokusíme případné chyby či nedostatky odbourat.</small>
@@ -483,7 +483,7 @@
                                     <p class="mb-4 display-cust lh-1 fw-bold">2000 Kč</p>
                                 </div>
                                 <ul class="d-flex list-unstyled mt-auto">
-                                    <li class="d-flex align-items-center me-3 text-justify">
+                                    <li class="d-flex align-items-center me-3 text-justify long-text">
                                         <small>Videoanalýza plaveckého způsobu s následnou korekcí techniky. Při využití této služby Vám bude poskytnut video
                                             záznam vašeho
                                             plaveckého způsobu, který následně rozebereme a společně se pokusíme případné chyby či nedostatky odbourat.</small>
@@ -560,7 +560,7 @@
                                     <p class="mb-4 display-cust lh-1 fw-bold">2000 Kč</p>
                                 </div>
                                 <ul class="d-flex list-unstyled mt-auto">
-                                    <li class="d-flex align-items-center me-3 text-justify">
+                                    <li class="d-flex align-items-center me-3 text-justify long-text">
                                         <small>Videoanalýza plaveckého způsobu s následnou korekcí techniky. Při využití této služby Vám bude poskytnut video
                                             záznam vašeho
                                             plaveckého způsobu, který následně rozebereme a společně se pokusíme případné chyby či nedostatky odbourat.</small>
@@ -637,7 +637,7 @@
                                     <p class="mb-4 display-cust lh-1 fw-bold">2000 Kč</p>
                                 </div>
                                 <ul class="d-flex list-unstyled mt-auto">
-                                    <li class="d-flex align-items-center me-3 text-justify">
+                                    <li class="d-flex align-items-center me-3 text-justify long-text">
                                         <small>Videoanalýza plaveckého způsobu s následnou korekcí techniky. Při využití této služby Vám bude poskytnut video
                                             záznam vašeho
                                             plaveckého způsobu, který následně rozebereme a společně se pokusíme případné chyby či nedostatky odbourat.</small>
@@ -669,7 +669,7 @@
                                     <p class="mb-3 display-cust lh-1 fw-bold">Od 200 Kč/hod</p>
                                 </div>
                                 <ul class="d-flex list-unstyled mt-auto">
-                                    <li class="d-flex align-items-center me-3 text-justify">
+                                    <li class="d-flex align-items-center me-3 text-justify long-text">
                                         <small>Při využití této služby budete ve spojení s trenérem,
                                             který Vám sestaví tréninkový program na míru. Právě díky zvolené formě „online“,
                                             Vám bude na pravidelné bázi zasílán trénink, který si můžete odtrénovat na
