PF message deleted, csps logo uncommented

--- a/index.html
+++ b/index.html
@@ -91,11 +91,6 @@
                         Rezervovat trénink
                     </button>
                 </a>
-                <a href="#">
-                    <button type="button" class="btn bg-danger btn-lg px-4 text-white" data-bs-toggle="modal" data-bs-target="#PfModal">
-                        <p class="p-0 m-0">PF 2022</p>
-                    </button>
-                </a>
             </div>
         </div>
         <div class="col-lg-7 p-0">
@@ -156,9 +151,10 @@
             <img src="static/images/sportgym_ostrava.webp" title="Sportovní gymnázium Dany a Emila Zátopkových Ostrava"
                  alt="Sportovní gymnázium Dany a Emila Zátopkových Ostrava - Logo" class="bi me-2" width="150"/>
         </a>
-        <!-- <a class="col d-flex align-items-start cooperation-logo justify-content-center py-3" href="https://www.czechswimming.cz">
-          <img src="static/images/csps.webp" alt="csps" class="bi me-2" width="200"/>
-        </a> -->
+        <a class="col d-flex align-items-start cooperation-logo justify-content-center py-3" href="https://www.czechswimming.cz">
+            <img src="static/images/csps.webp" title="Český Svaz Plaveckých Sportů"
+                 alt="Český Svaz Plaveckých Sportů - Logo" class="bi me-2" width="200"/>
+        </a>
     </div>
 </div>
 
