Reservation button color changed (blue>green)

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 oboru</p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3 pt-5 justify-content-center buttons">
                 <a href="#contact">
-                    <button type="button" class="btn bg-color-es btn-lg px-4 me-sm-3 text-white">
+                    <button type="button" class="btn bg-green btn-lg px-4 me-sm-3 text-white">
                         Rezervovat trénink
                     </button>
                 </a>
