Button IDs added

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
     <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
         <div class="col">
-            <button type="button" class="btn-no-style" data-bs-toggle="modal" data-bs-target="#PragueModal">
+            <button id="prague" type="button" class="btn-no-style" data-bs-toggle="modal" data-bs-target="#PragueModal">
                 <div class="card card-cover h-100 overflow-hidden text-white rounded-5 shadow-lg" style="background-image: url('static/images/prague.webp');">
                     <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
                         <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold no-decoration text-start">Praha</h2>
@@ -194,7 +194,7 @@
         </div>
 
         <div class="col">
-            <button class="btn-no-style" data-bs-toggle="modal" data-bs-target="#BrnoModal">
+            <button id="brno" class="btn-no-style" data-bs-toggle="modal" data-bs-target="#BrnoModal">
                 <div class="card card-cover h-100 overflow-hidden text-white rounded-5 shadow-lg" style="background-image: url('static/images/brno.webp');">
                     <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
                         <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold text-start">Brno</h2>
@@ -208,7 +208,7 @@
         </div>
 
         <div class="col">
-            <button class="btn-no-style" data-bs-toggle="modal" data-bs-target="#OstravaModal">
+            <button id="ostrava" class="btn-no-style" data-bs-toggle="modal" data-bs-target="#OstravaModal">
                 <div class="card card-cover h-100 overflow-hidden text-white rounded-5 shadow-lg" style="background-image: url('static/images/ostrava.jpg');">
                     <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
                         <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold text-start">Ostrava</h2>
@@ -222,7 +222,7 @@
         </div>
 
         <div class="col">
-            <button class="btn-no-style" data-bs-toggle="modal" data-bs-target="#OlomoucModal">
+            <button id="olomouc" class="btn-no-style" data-bs-toggle="modal" data-bs-target="#OlomoucModal">
                 <div class="card card-cover h-100 overflow-hidden text-white rounded-5 shadow-lg" style="background-image: url('static/images/olomouc.webp');">
                     <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
                         <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold text-start">Olomouc</h2>
@@ -236,7 +236,7 @@
         </div>
 
         <div class="col">
-            <button class="btn-no-style" data-bs-toggle="modal" data-bs-target="#OnlineModal">
+            <button id="online" class="btn-no-style" data-bs-toggle="modal" data-bs-target="#OnlineModal">
                 <div class="card card-cover h-100 overflow-hidden text-white rounded-5 shadow-lg" style="background-image: url('static/images/online.webp');">
                     <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
                         <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold text-start">Online</h2>
